# adhoc_audio

./: .gitignore  Cargo.toml  README.md  build.sh
examples/: compress.rs  decompress.rs
js/: recorder.js
src/: codec.rs  collections.rs  lib.rs  main.rs  math.rs  signal.rs
src/codec/: adhoc.rs  wav.rs
src/codec/adhoc/: audio_stream.rs  frame.rs
src/collections/: bitstream.rs  bitvec.rs  linked_list.rs  lru_cache.rs  nibble_list.rs  queue.rs  stack.rs
src/math/: noise.rs  parabola.rs  signal.rs
