[package]
name = "adhoc_audio"
version = "0.1.0"
edition = "2021"
authors = ["k. collin dacosta <khadeem.dacosta@gmail.com>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
desktop = ["clap", "rand"]

[dependencies]
serde = { version = "*", features = ['derive'] }
bincode = "*"
serde_json = "*"
rand = { version = "*", optional = true }
clap = { version = "2.33.3", optional = true }
