[package]
name = "adhoc_audio"
version = "0.1.2"
edition = "2021"
authors = ["k. Collin DaCosta <khadeem.dacosta@gmail.com>"]
description = "A very basic audio codec, written in pure rust"
license = "MIT OR Apache-2.0"
keywords = ["audio","compression","codec","adhoc"]
exclude = ["resources/*"]
repository = "https://github.com/K-C-DaCosta/adhoc_audio"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
cli = ["clap", "rand"]

[dependencies]
serde = { version = "1.0.130", features = ['derive'] }
bincode = "1.3.3"
rand = { version = "^0.8.0" , optional = true }
clap = { version = "2.33.3", optional = true }
